--- a/config.json
+++ b/config.json
@@ -23,5 +23,6 @@
     ],
     "last_favlist": 0,
     "last_station": 1,
-    "last_volume": 75
+    "last_volume": 75,
+    "screensaver_after_s" : 10
 }
