--- a/config.json
+++ b/config.json
@@ -13,12 +13,12 @@
             "file": "fav_news.json"
         },
         { 
-            "name": "80er",
+            "name": "60,70,80,90er",
             "file": "fav_80er.json"
         },
         { 
-            "name": "Fav5 (leer)",
-            "file": "fav_5.json"
+            "name": "International",
+            "file": "fav_international.json"
         }
     ],
     "last_favlist": 0,
