--- a/config.json
+++ b/config.json
@@ -1,28 +1,29 @@
 {
-    "favorites": [
-        { 
-            "name": "Tanja",
-            "file": "fav_tanja.json"
-        }, 
-        { 
-            "name": "Sven",
-            "file": "fav_sven.json"
-        },
-        { 
-            "name": "Nachrichten",
-            "file": "fav_news.json"
-        },
-        { 
-            "name": "60,70,80,90er",
-            "file": "fav_80er.json"
-        },
-        { 
-            "name": "International",
-            "file": "fav_international.json"
-        }
-    ],
-    "last_favlist": 0,
-    "last_station": 1,
-    "last_volume": 75,
-    "screensaver_after_s" : 90
+        "favorites": [
+                {
+                        "name": "Tanja",
+                        "file": "fav_tanja.json"
+                },
+                {
+                        "name": "Sven",
+                        "file": "fav_sven.json"
+                },
+                {
+                        "name": "Nachrichten",
+                        "file": "fav_news.json"
+                },
+                {
+                        "name": "60,70,80,90er",
+                        "file": "fav_80er.json"
+                },
+                {
+                        "name": "International",
+                        "file": "fav_international.json"
+                }
+        ],
+        "last_favlist": 1,
+        "last_station": 8,
+        "last_volume": 24,
+        "screensaver_after_s": 9,
+        "auto_save_config": true
 }
